Bug 156136 - Missing "Go to" action for "Text contrast too low" issue type
Summary: Missing "Go to" action for "Text contrast too low" issue type
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-03 11:20 UTC by Samuel Mehrbrodt
Modified: 2023-07-07 09:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (8.71 KB, application/vnd.oasis.opendocument.text)
2023-07-03 11:20 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2023-07-03 11:20:36 UTC
Created attachment 188177 [details]
bugdoc

1. Open bugdoc
2. Go to a11y check deck

Issue "Text contrast is too low" should be clickable so that you can jump to the location where this issue appears.
Comment 1 Commit Notification 2023-07-06 11:24:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e49ba051b9cc077ffeca66afe341c67194e90f9

tdf#156136 - Add "Go to" action for "Text contrast too low" issue type

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-07-07 09:23:23 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5ba701935923f27b4155d61ce17fbe1af176613e

tdf#156136 - Add "Go to" action for "Text contrast too low" issue type

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.