tdf#156136 - Add "Go to" action for "Text contrast too low" issue type

Change-Id: Icce3b56877679ca40a52a2c5f4b8f70f14268fac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154078
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit 0cc7998194e7467182175643469fb0365b728752)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154117
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>